# libdocpilot

./: 4ffa68d7f7f38e90  README.md  benchmark.py  config.py  customxlsxreader.py  dspyclasses.py  environment.yml  example.py  main.py  parsers.py  pyproject.toml  requirements.txt  setup.cfg  signatures.py  testbook.ipynb  utils.py
data/: machines.xlsx
docpilot/: dspyclasses.py  parsers.py  signatures.py
docpilot/preprocessors/: pdf.py
docpilot/utils/: embed_utils.py  llama_utils.py
labels/: example_label.json
notlogging/: notlogger.py
preprocessors/: pdf.py
src/docpilot/: dspyclasses.py  lm.py  parsers.py  signatures.py
src/docpilot/preprocessors/: pdf.py
src/docpilot/utils/: embed_utils.py  image_utils.py  llama_utils.py  logger.py
utils/: embed_utils.py  llama_utils.py
