[project]
name = "libdocpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "dspy~=2.5.43",
    "flask>=3.1.2",
    "llama-index~=0.12.9",
    "llama-index-core~=0.12.9",
    "llama-index-embeddings-huggingface~=0.4.0",
    "llama-index-embeddings-ollama~=0.5.0",
    "llama-index-vector-stores-postgres~=0.4.2",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "pillow~=10.4.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary~=2.9.10",
    "pymupdf~=1.25.1",
    "pypdf~=5.1.0",
    "setuptools~=75.6.0",
    "sqlalchemy~=2.0.36",
    "torch~=2.5.1",
]
