[project]
name = "docpilot"
version = "1.1.0"
description = "An enhanced RAG pipeline for chatting with documents with source image retrieval"
authors = [
    { name = "Nikhil Solanke", email = "nikhilsolanke5@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1.3",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "llama-index>=0.14.14",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-vector-stores-postgres>=0.7.3",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.11",
    "pymupdf>=1.27.1",
]

[project.scripts]
docpilot = "docpilot:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
