[metadata]
version = 1.0
name = docpilot
url = https://github.com/Silent-Crafter/docpilot-ai
author = Silent-Crafter
description = Chat with your docs
; long_description = file:README.md
; long_description_content_type = text/markdown

[options]
include_package_data = true
; install_requires =
;     spotipy
;     mutagen
;     yt-dlp
;     requests
python_requires = >=3.11
packages = find:
